<resources>
    <string name="app_name">Asusu Igbo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text">Home</string>
    <string name="newest_text">Newest</string>
    <string name="profile_text">Profile</string>
    <string name="lessons_text">Lessons</string>
    <string name="select_answer_header">Choose the correct translation</string>
    <string name="close_button_description">Close button</string>

    <string name="next_question_text">Next Question</string>

    <string name="next_question_button_state">NextQuestion</string>
    <string name="answer_button_state">Check Answer</string>
    <string name="finished_button_state">Finished</string>
    <string name="you_are_correct_text">You are Correct!</string>
    <string name="answer_template">Correct Answer: </string>
    <string name="imageDummyText">image</string>
    <string name="please_wait">Please wait..</string>
    <string name="new_words">New Words</string>
    <string name="past">Past</string>
    <string name="completed_the_lesson">You completed the lesson!</string>
    <string name="continue_text">Continue</string>
    <string name="congratulations_text">Congratulations</string>
    <string name="congratulations_image">Congratulations Image</string>
    <string name="congratulations_image1">Congratulations Image</string>
    <string name="show_translation">Show translation</string>
    <string name="hide_translation">Hide Translation</string>
    <string name="sample_question">Questions place holder..?</string>
    <string name="move_text">Move text</string>
    <string name="click_me">Click me</string>
    <string name="user_profile_image">User profile image</string>
    <string name="temporary_username">Temporary username</string>
    <string name="lessons_completed_text">Lessons completed</string>
    <string name="ten">10</string>
    <string name="app_logo">App Logo</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="no_account_sign_up">No Account? Sign Up</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="total_words_learned">Total words learned</string>
    <string name="write_translation">Write translation..</string>
    <string name="type_translation">Translate the sentence below</string>
    <string name="correct_answer_text">Correct Answer:</string>
    <string name="pair_words">Pair words with correct translation</string>
    <string name="started_recording">Started recording…</string>
    <string name="stopped_recording">Stopped recording…</string>
    <string name="add_question">Add Question</string>
    <string name="record_audio">Record Audio</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="add_option">Add Option</string>
    <string name="additional_info">Additional Info</string>
    <string name="option">Option</string>
    <string name="save">Save</string>
    <string name="play_audio">Play Audio</string>
    <string name="news_weekly">Weekly</string>
    <string name="more">More</string>
    <string name="igbo">Igbo</string>
    <string name="select_language">Select Language to Learn</string>
    <string name="choose_language_text">Choose Language</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="weekly_news">Weekly News</string>
    <string name="language">Language</string>
    <string name="template_started_july_20th_2020">Started: July 20th, 2020</string>
    <string name="template_current_language_igbo">Current Language: Igbo</string>
    <string name="my_languages">My Languages</string>
    <string name="open_dialog">Open Dialog</string>
    <string name="active">Active</string>
    <string name="loading_lesson">Loading Lesson....</string>
    <string name="news_title">News Title</string>
    <string name="news_source">News Source</string>
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="choose_image">Choose Image:</string>
    <string name="no_news_to_display">No News to display!</string>
</resources>
