<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:id="@+id/lesson_completed_id"
        tools:context=".fragments.LessonCompletedFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/image_view_congrats"
                android:layout_width="280dp"
                android:layout_height="80dp"
                android:contentDescription="@string/congratulations_text"
                android:src="@mipmap/congratulations"
                app:layout_constraintBottom_toTopOf="@+id/finished_quiz_button_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.397" />

            <ImageView
                android:id="@+id/task_completed_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/congratulations_image1"
                android:src="@mipmap/task_completed"
                app:layout_constraintBottom_toTopOf="@+id/finished_quiz_button_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_congrats"
                app:layout_constraintVertical_bias="0.024" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_the_lesson"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/finished_quiz_button_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_completed_id"
                app:layout_constraintVertical_bias="0.043" />

            <TextView
                android:id="@+id/finished_quiz_button_id"
                style="@style/RoundedCornerButtonTheme"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:text="@string/continue_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.976" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>