<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.ChooseLangPromptFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.3"
                android:src="@mipmap/asusu_igbo"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/login_btn"
                android:gravity="center|center_horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:padding="18dp"
                android:textAllCaps="false"
                android:text="@string/select_language"
                android:textColor="@color/colorWhite"
                android:textSize="19sp"
                android:background="@drawable/rounder_corner_button_shape"
                android:id="@+id/selectLanguage"/>

            <ProgressBar
                android:id="@+id/loading_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center_horizontal"
                android:padding="18dp"
                android:textAllCaps="false"
                android:text="@string/already_have_an_account_login"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:background="@null"
                android:id="@+id/login_btn"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>
