<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="7dp"
    android:background="@color/colorWhite"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/option_constraint_layout_1">
            <!-- Question -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/record_audio_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="spread"
                app:layout_constrainedWidth="true"
                android:layout_marginStart="10dp"
                android:padding="3dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/option_add_question_container_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:textSize="14sp"
                    android:hint="@string/option"
                    android:id="@+id/option_add_option_id"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constrainedWidth="true"
                android:id="@+id/record_audio_parent"
                android:layout_alignParentEnd="true">
                <!-- Record audio - will be beside question -->
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="6dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_logo"
                    android:src="@mipmap/record_audio"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:id="@+id/option_record_audio_button_id"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/option_record_audio_button_id"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:fontFamily="@font/andika"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/record_audio"
                    tools:ignore="SmallSp" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:padding="3dp"
                app:layout_constraintWidth_default="spread"
                app:layout_constrainedWidth="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/option_add_question_container_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/option_additional_info_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:hint="@string/additional_info"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>