<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.asusuigbo.frank.asusuigbo.fragments.addnewsinfo.AddNewsInfoViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.addnewsinfo.AddNewsInfoFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">

            <!-- Title -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newsTitle_Layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:hint="@string/news_title"
                    android:text="@{viewModel.title}"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- news source -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newsSource_Layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newsTitle_Layout"
                app:layout_constraintVertical_bias="0.05">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newsSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:hint="@string/news_source"
                    android:text="@{viewModel.newsSource}"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- content -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/content_Layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newsSource_Layout"
                app:layout_constraintVertical_bias="0.05">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:fontFamily="@font/andika"
                    android:hint="@string/content"
                    android:lines="2"
                    android:maxLines="8"
                    android:text="@{viewModel.content}"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- date -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_Layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content_Layout"
                app:layout_constraintVertical_bias="0.05">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:hint="@string/date"
                    android:text="@{viewModel.date}"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/guideline"
                app:layout_constraintGuide_percent=".50"/>

            <!-- Language -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lang_Layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/content_Layout"
                app:layout_constraintVertical_bias="0.05">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/andika"
                    android:hint="@string/language"
                    android:text="@{viewModel.language}"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- choose image -->
            <TextView
                android:id="@+id/chooseImageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_Layout"
                app:layout_constraintVertical_bias="0.1" />

            <!-- pick image -->
            <ImageView
                android:id="@+id/selectImageBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/img_add_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_Layout"
                app:layout_constraintVertical_bias="0.11"
                tools:ignore="ContentDescription" />

            <!-- save data-->
            <TextView
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/rounder_corner_button_shape"
                android:gravity="center|center_horizontal"
                android:padding="18dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>